Added variable build information properties to CmsSystemInfo.
Improved scripted version / build information.